# fire-intelligence-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  DEPLOYMENT.md  Dockerfile  MASTER_PROMPT.md  Makefile  PROJECT.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_foundation.py  3ef061ca9ed9_complete_roadmap_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: audit.py  auth.py  enterprise.py  health.py  knowledge.py  model_management.py  organizations.py  platform.py  prompts.py  records.py  statistics.py  system.py  tasks.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  permissions.py  security.py
backend/app/db/: models.py  session.py
backend/app/models/: __init__.py  audit.py  document.py  file.py  inspection.py  interview.py  knowledge.py  model_config.py  organization.py  photo_report.py  prompt.py  task.py  user.py  user_profile.py
backend/app/platform/: __init__.py  contracts.py
backend/app/rag/: __init__.py  chunking.py  parsers.py  retrieval.py
backend/app/rag/chunking/: semantic.py
backend/app/rag/embedding/: service.py
backend/app/rag/parsers/: base.py
backend/app/rag/reranking/: reranker.py
backend/app/rag/retrieval/: retriever.py
backend/app/repositories/: audit.py  file.py  inspection.py  interview.py  knowledge.py  organization.py  photo_report.py  task.py  user.py  users.py
backend/app/routers/: auth.py  health.py  inspection_record.py  interview_record.py  knowledge.py  photo_report.py  qa.py  statistics.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  business.py  common.py  inspection.py  interview.py  knowledge.py  model_config.py  organization.py  photo_report.py  prompt.py  qa.py  statistics.py  task.py
backend/app/services/: audit.py  auth.py  files.py  inspection.py  interview.py  knowledge.py  photo_report.py  prompt_service.py  qa.py  statistics.py  workflows.py
backend/app/services/ai/: __init__.py  embedding.py  llm.py  media.py  ocr.py  openai_compatible.py  orchestrator.py  prompts.py  reranker.py  speech.py  vision.py
backend/app/utils/: file.py
backend/scripts/: backup.sh
backend/tests/: conftest.py  test_ai_client.py  test_auth.py  test_business.py  test_health.py  test_security.py  test_storage.py  test_workflows.py
specs/: README.md  (+10 more)
(+57 files in other folders)
